[package]
name = "aa2cg"
version = "0.0.2"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]

[dependencies]
getopts = "0.2.4"
rustc-serialize = "0.3.22"
csv = "0.15.0"
biost = { git = "https://github.com/0ncorhynchus/biost" }
groio = { git = "https://github.com/0ncorhynchus/groio", branch = "validation" }
